# plex-tag-automation

./: .env.example  .gitignore  Cargo.toml  README.md  config.example.yaml  config.example.yml
src/: config.rs  handlers.rs  main.rs  plex.rs
